使用gorm/gen生成model和query;使用gorm/gen生成的CRUD代替原来的查询方式;
