# docs/swagger.json
@@ -10,45 +10,29 @@
     "basePath": "/",
     "paths": {
         "/admin/login": {
-            "post": {
+            "get": {
                 "description": "管理员登录",
                 "consumes": [
-                    "application/x-www-form-urlencoded"
+                    "application/json"
                 ],
                 "produces": [
-                    "application/json"
+                    "text/plain"
                 ],
                 "tags": [
                     "管理员"
                 ],
                 "summary": "管理员登录",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "用户名",
-                        "name": "username",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "用户名",
-                        "name": "password",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "登录成功",
                         "schema": {
-                            "$ref": "#/definitions/model.LoginResp"
+                            "$ref": "#/definitions/common.LoginResp"
                         }
                     },
                     "400": {
                         "description": "请求参数错误",
                         "schema": {
-                            "$ref": "#/definitions/model.Base"
+                            "$ref": "#/definitions/common.Base"
                         }
                     }
                 }
@@ -87,13 +71,13 @@
                     "200": {
                         "description": "登录成功",
                         "schema": {
-                            "$ref": "#/definitions/model.LoginResp"
+                            "$ref": "#/definitions/common.LoginResp"
                         }
                     },
                     "400": {
                         "description": "请求参数错误",
                         "schema": {
-                            "$ref": "#/definitions/model.Base"
+                            "$ref": "#/definitions/common.Base"
                         }
                     }
                 }
@@ -122,7 +106,7 @@
                     "400": {
                         "description": "请求参数错误",
                         "schema": {
-                            "$ref": "#/definitions/model.Base"
+                            "$ref": "#/definitions/common.Base"
                         }
                     }
                 }
@@ -161,13 +145,13 @@
                     "200": {
                         "description": "注册成功",
                         "schema": {
-                            "$ref": "#/definitions/model.LoginResp"
+                            "$ref": "#/definitions/common.LoginResp"
                         }
                     },
                     "400": {
                         "description": "请求参数错误",
                         "schema": {
-                            "$ref": "#/definitions/model.Base"
+                            "$ref": "#/definitions/common.Base"
                         }
                     }
                 }
@@ -197,14 +181,14 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.UserResp"
+                                "$ref": "#/definitions/common.UserResp"
                             }
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.Base"
+                            "$ref": "#/definitions/common.Base"
                         }
                     }
                 }
@@ -241,13 +225,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.UserResp"
+                            "$ref": "#/definitions/common.UserResp"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.Base"
+                            "$ref": "#/definitions/common.Base"
                         }
                     }
                 }
@@ -255,7 +239,7 @@
         }
     },
     "definitions": {
-        "model.Base": {
+        "common.Base": {
             "type": "object",
             "properties": {
                 "code": {
@@ -267,7 +251,7 @@
                 }
             }
         },
-        "model.LoginResp": {
+        "common.LoginResp": {
             "type": "object",
             "properties": {
                 "accessToken": {
@@ -290,7 +274,7 @@
                 }
             }
         },
-        "model.UserResp": {
+        "common.UserResp": {
             "type": "object",
             "properties": {
                 "age": {
